# stridsvagn122.github.io

./: .nojekyll  README.md  about.html  pyproject.toml
.github/workflows/: quarto-publish.yml
name/: _quarto.yml  index.qmd
name/_site/: index.html
