[project]
name = "stridsvagn122-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "stridsvagn122",email = "firefly@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "stridsvagn122"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
